# api-email-service

./: .gitignore  LICENSE  README.md  pyproject.toml
adapters/: email_sender_gateway.py
application/: email_sender_service.py
controllers/: email_controller.py
core/: email_sender_use_case.py
email_service/: app.py
email_service/blueprints/: __init__.py
email_service/blueprints/api/: emails.py
email_service/factories/: email_controller_factory.py
infrastructure/adapters/: ses_email_service.py
tests/: test_email.py
